Fix album links on index.html

--- a/index.html
+++ b/index.html
@@ -43,25 +43,25 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/animals">
+          <a class="d-block mb-4 h-100" href="album/animals.html">
             <img class="img-fluid img-thumbnail" src="img/animals/img.jpg" alt="Animals">
             <figcaption class="figure-caption text-center">Animals & Insects</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/blackandwhite">
+          <a class="d-block mb-4 h-100" href="album/blackandwhite.html">
             <img class="img-fluid img-thumbnail" src="img/blackandwhite/img.jpg" alt="BlackAndWhite">
             <figcaption class="figure-caption text-center">Black & White</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/toulouse">
+          <a class="d-block mb-4 h-100" href="album/toulouse.html">
             <img class="img-fluid img-thumbnail" src="img/toulouse/img.jpg" alt="Toulouse">
             <figcaption class="figure-caption text-center">Toulouse</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/people">
+          <a class="d-block mb-4 h-100" href="album/people.html">
             <img class="img-fluid img-thumbnail" src="img/people/img.jpg" alt="People">
             <figcaption class="figure-caption text-center">People</figcaption>
           </a>
