--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/sunsets">
+          <a class="d-block mb-4 h-100" href="album/sunsets.html">
             <img class="img-fluid img-thumbnail" src="img/sunsets/img.jpg" alt="Sunsets">
             <figcaption class="figure-caption text-center">Sunsets</figcaption>
           </a>
