Modify album path for nginx configuration - Change favicon

--- a/album/toulouse/index.html
+++ b/album/toulouse/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Photo Gallery">
     <meta name="author" content="Estelle">
-    <link rel="icon" type="image/png" href="../favicon.png" />
+    <link rel="icon" type="image/png" href="../../favicon.png" />
 
     <title>Estelle Photo Gallery</title>
 
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles -->
-    <link href="../css/album.css" rel="stylesheet">
+    <link href="../../css/album.css" rel="stylesheet">
 
   </head>
 
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="../index.html">Estelle Photo Gallery</a>
+        <a class="navbar-brand" href="/">Estelle Photo Gallery</a>
       </div>
     </nav>
 
@@ -42,12 +42,12 @@
         <li data-target="#carousel" data-slide-to="5"></li>
       </ol>
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active" style="background-image: url('../img/sunsets/carousel/img1.jpg')"></div>
-        <div class="carousel-item" style="background-image: url('../img/sunsets/carousel/img2.jpg')"></div>
-        <div class="carousel-item" style="background-image: url('../img/sunsets/carousel/img3.jpg')"></div>
-        <div class="carousel-item" style="background-image: url('../img/sunsets/carousel/img4.jpg')"></div>
-        <div class="carousel-item" style="background-image: url('../img/sunsets/carousel/img5.jpg')"></div>
-        <div class="carousel-item" style="background-image: url('../img/sunsets/carousel/img6.jpg')"></div>
+        <div class="carousel-item active" style="background-image: url('../../img/toulouse/carousel/img1.jpg')"></div>
+        <div class="carousel-item" style="background-image: url('../../img/toulouse/carousel/img2.jpg')"></div>
+        <div class="carousel-item" style="background-image: url('../../img/toulouse/carousel/img3.jpg')"></div>
+        <div class="carousel-item" style="background-image: url('../../img/toulouse/carousel/img4.jpg')"></div>
+        <div class="carousel-item" style="background-image: url('../../img/toulouse/carousel/img5.jpg')"></div>
+        <div class="carousel-item" style="background-image: url('../../img/toulouse/carousel/img6.jpg')"></div>
       </div>
       <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
