--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Estelle Photo Gallery</a>
+        <a class="navbar-brand" href="/">Estelle Photo Gallery</a>
       </div>
     </nav>
 
@@ -37,37 +37,37 @@
       <div class="row text-center text-lg-left">
 
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/vietnam.html">
+          <a class="d-block mb-4 h-100" href="album/vietnam/">
             <img class="img-fluid img-thumbnail" src="img/vietnam/img.jpg" alt="Vietnam">
             <figcaption class="figure-caption text-center">Vietnam</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/animals.html">
+          <a class="d-block mb-4 h-100" href="album/animals/">
             <img class="img-fluid img-thumbnail" src="img/animals/img.jpg" alt="Animals">
             <figcaption class="figure-caption text-center">Animals & Insects</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/blackandwhite.html">
+          <a class="d-block mb-4 h-100" href="album/blackandwhite/">
             <img class="img-fluid img-thumbnail" src="img/blackandwhite/img.jpg" alt="BlackAndWhite">
             <figcaption class="figure-caption text-center">Black & White</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/toulouse.html">
+          <a class="d-block mb-4 h-100" href="album/toulouse/">
             <img class="img-fluid img-thumbnail" src="img/toulouse/img.jpg" alt="Toulouse">
             <figcaption class="figure-caption text-center">Toulouse</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/people.html">
+          <a class="d-block mb-4 h-100" href="album/people/">
             <img class="img-fluid img-thumbnail" src="img/people/img.jpg" alt="People">
             <figcaption class="figure-caption text-center">People</figcaption>
           </a>
         </div>
         <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/sunsets.html">
+          <a class="d-block mb-4 h-100" href="album/sunsets/">
             <img class="img-fluid img-thumbnail" src="img/sunsets/img.jpg" alt="Sunsets">
             <figcaption class="figure-caption text-center">Sunsets</figcaption>
           </a>
