Fix navbar link

--- a/album/animals/index.html
+++ b/album/animals/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="/">Estelle Photo Gallery</a>
+        <a class="navbar-brand" href="./">Estelle Photo Gallery</a>
       </div>
     </nav>
 
