--- a/index.html
+++ b/index.html
@@ -5,114 +5,90 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Photo Gallery">
-    <meta name="author" content="Estelle">
+    <meta name="description" content="Estelle Picq Photo Gallery">
+    <meta name="author" content="Estelle Picq">
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <title>Estelle Photo Gallery</title>
+    <title>Estelle Photography</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Custom styles -->
     <link href="css/styles.css" rel="stylesheet">
 
   </head>
 
   <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="./">Estelle Photo Gallery</a>
-      </div>
-    </nav>
+    <main>
 
-    <!-- Page Content -->
-    <div class="container">
-
-      <div class="row text-center text-lg-left">
-
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/vietnam/">
-            <img class="img-fluid img-thumbnail" src="img/vietnam/img.jpg" alt="Vietnam">
-            <figcaption class="figure-caption text-center">Vietnam</figcaption>
-          </a>
+      <div id="landing">
+        <div id="landing-text">
+          <div id="landing-text-inner">
+            <h1>Estelle Photography</h1>
+            <h2>Lorem ipsum dolor</h2>
+            <a href="#images" class="btn" id="view-work">Discover</a>
+          </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/animals/">
-            <img class="img-fluid img-thumbnail" src="img/animals/img.jpg" alt="Animals">
-            <figcaption class="figure-caption text-center">Animals & Insects</figcaption>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/blackandwhite/">
-            <img class="img-fluid img-thumbnail" src="img/blackandwhite/img.jpg" alt="BlackAndWhite">
-            <figcaption class="figure-caption text-center">Black & White</figcaption>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/toulouse/">
-            <img class="img-fluid img-thumbnail" src="img/toulouse/img.jpg" alt="Toulouse">
-            <figcaption class="figure-caption text-center">Toulouse</figcaption>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/people/">
-            <img class="img-fluid img-thumbnail" src="img/people/img.jpg" alt="People">
-            <figcaption class="figure-caption text-center">People</figcaption>
-          </a>
-        </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
-          <a class="d-block mb-4 h-100" href="album/sunsets/">
-            <img class="img-fluid img-thumbnail" src="img/sunsets/img.jpg" alt="Sunsets">
-            <figcaption class="figure-caption text-center">Sunsets</figcaption>
-          </a>
-        </div>
+        <div id="landing-image"></div>
       </div>
 
-    </div>
-    <!-- /.container -->
+      <div id="images">
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container text-center">
-        <p class="m-0 text-white">Copyright &copy; Estelle Photo Gallery 2018</p>
-         <ul class="list-inline mb-0">
-          <li class="list-inline-item">
-            <a href="https://www.flickr.com/photos/155552305@N07/" target="_blank">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://500px.com/estellepicq" target="_blank">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-500px fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a href="https://www.instagram.com/estellepicq/" target="_blank">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-        </ul>
+        <div id="header">
+          <h2>Gallery</h2>
+        </div>
+
+        <img src="img/blackandwhite.jpg" alt="Black and white">
+        <div class="caption">
+          <h3>Bir-Hakeim Bridge</h3>
+          <p>Paris</p>
+        </div>
+
+        <img src="img/sunsets.jpg" alt="Sunsets">
+        <div class="caption">
+          <h3>Sunrise</h3>
+          <p>La Flotte sur Mer</p>
+        </div>
+
+        <img src="img/people.jpg" alt="People">
+        <div class="caption">
+          <h3>A girl</h3>
+          <p>Hanoi</p>
+        </div>
+
+        <img src="img/toulouse.jpg" alt="Toulouse">
+        <div class="caption">
+          <h3>Wheel</h3>
+          <p>Toulouse</p>
+        </div>
+
+        <img src="img/vietnam.jpg" alt="VIetnam">
+        <div class="caption">
+          <h3>Traffic</h3>
+          <p>Hanoi</p>
+        </div>
+
+        <img src="img/animals.jpg" alt="Animals">
+        <div class="caption">
+          <h3>Dragonfly</h3>
+          <p>Vietnam</p>
+        </div>
+
       </div>
+
+    </main>
+
+    <footer>
+      <h3>Find me on Flickr</h3>
+      <a href="https://www.flickr.com/photos/estellepicq/" target="_blank">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-flickr fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+    <script src="js/main.js"></script>
 
   </body>
 
