Images are now links from flickr

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="landing-text">
           <div id="landing-text-inner">
             <h1>Estelle Photography</h1>
-            <h2>Lorem ipsum dolor</h2>
+            <!-- <h2></h2> -->
             <a href="#images" class="btn" id="view-work">Discover</a>
           </div>
         </div>
@@ -37,37 +37,37 @@
           <h2>Gallery</h2>
         </div>
 
-        <img src="img/blackandwhite.jpg" alt="Black and white">
+        <img src="https://farm2.staticflickr.com/1870/44454855451_32920d5850_c.jpg" alt="Black and white">
         <div class="caption">
           <h3>Bir-Hakeim Bridge</h3>
           <p>Paris</p>
         </div>
 
-        <img src="img/sunsets.jpg" alt="Sunsets">
+        <img src="https://farm2.staticflickr.com/1882/44454840001_d9817130b1_c.jpg" alt="Sunsets">
         <div class="caption">
           <h3>Sunrise</h3>
           <p>La Flotte sur Mer</p>
         </div>
 
-        <img src="img/people.jpg" alt="People">
+        <img src="https://farm2.staticflickr.com/1853/43588791485_1d6be278ec_c.jpg" alt="People">
         <div class="caption">
           <h3>A girl</h3>
           <p>Hanoi</p>
         </div>
 
-        <img src="img/toulouse.jpg" alt="Toulouse">
+        <img src="https://farm2.staticflickr.com/1892/42646036350_4726d9552e_c.jpg" alt="Toulouse">
         <div class="caption">
           <h3>Wheel</h3>
           <p>Toulouse</p>
         </div>
 
-        <img src="img/vietnam.jpg" alt="VIetnam">
+        <img src="https://farm5.staticflickr.com/4263/34965174521_af4424aba1_c.jpg" alt="Vietnam">
         <div class="caption">
           <h3>Traffic</h3>
           <p>Hanoi</p>
         </div>
 
-        <img src="img/animals.jpg" alt="Animals">
+        <img src="https://farm5.staticflickr.com/4250/34708982640_88fe6c045b_c.jpg" alt="Animals">
         <div class="caption">
           <h3>Dragonfly</h3>
           <p>Vietnam</p>
