--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </a>
     </footer>
 
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/main.js"></script>
 
   </body>
